[package]
name = "rusty_bar"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }

iced = {version = "0.14.0", default-features = false, features = ["debug", "fira-sans", "linux-theme-detection", "tiny-skia", "smol"]}
iced_layershell = { version = "0.14.2", default-features = false, features = ["debug", "fira-sans", "linux-theme-detection", "tiny-skia"]}
open-meteo-rs = "0.0.5"
softbuffer = {version = "=0.4.1"}

[patch.crates-io]
softbuffer = { git = "https://github.com/pop-os/softbuffer", tag = "cosmic-4.0" }
